tests/expectations/compiler/bugs/b29184_fail.out
Error [ETYC0372072]: Expected a tuple with 3 elements, found one with 2 elements
    --> compiler-test:7:9
     |
   7 |         let (a, b) = (1u8, 2u8, 3u8);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
